--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
       {% if page.id %}
       <h6 class="share-title">Share this post</h6>
       {% for social in site.social %}
-      {% if social.share_url != null %}
+      {% if social.share_url %}
       <a target="_blank" class="icon icon-{{ social.icon }}" href="{{ social.share_url }}{{ social.share_title }}{{ page.title | cgi_escape }}{{ social.share_link }}{{ site.url }}{{ page.id }}" onclick="window.open(this.href, '{{ social.icon }}-share', 'width=550,height=255');return false;">
         <i class="fa fa-{{ social.icon }}"></i>
         <span class="hidden">{{ social.icon }}</span>
