--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,7 @@
           </div>
         </div>
         {% else %}
-        <div class="noarticleimage">
+        <div class="no-article-image">
           <div class="post-meta">
             <h1 class="post-title">{{ page.title }}</h1>
             <div class="cf post-meta-text">
