--- a/css/main.scss
+++ b/css/main.scss
@@ -107,12 +107,13 @@ body {
 }
 
 .blog-header {
-  width: 100%;
-  max-width: 640px;
+  box-sizing: border-box;
   margin: 0 auto;
-  position: relative;
+  max-width: 640px;
   padding: 0;
-  @include box-sizing(border-box);
+  position: relative;
+  width: 100%;
+
   @include respond-to(768) {
     padding: 0 $rs;
   }
@@ -175,10 +176,11 @@ body {
 }
 
 .content {
-  width: 100%;
-  max-width: 640px;
+  box-sizing: border-box;
   margin: 0 auto;
-  @include box-sizing(border-box);
+  max-width: 640px;
+  width: 100%;
+
   @include respond-to(768) {
     padding: 0 $rs * 2;
   }
@@ -370,11 +372,6 @@ body {
   z-index: 999;
 }
 
-.tag-articleimage .post-reading {
-  color: rgba(255, 255, 255, 0.9);
-  text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25), 0px 0px 1px rgba(0, 0, 0, 0.5);
-}
-
 .site-footer {
   background-attachment: fixed;
   background-color: #303030;
@@ -397,10 +394,10 @@ body {
 }
 
 .icon {
-  @include inline-block;
   background: rgba(87, 173, 104, .8);
   border-radius: 100%;
   color: #fff;
+  display: inline-block;
   font-size: 2.5rem;
   height: 64px;
   margin: 0 .5rem;
@@ -462,6 +459,11 @@ body {
     bottom: 0;
     overflow: hidden;
 
+    + .post-content .post-reading {
+      color: rgba(255, 255, 255, 0.9);
+      text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25), 0px 0px 1px rgba(0, 0, 0, 0.5);
+    }
+
     .post-image-image {
       background-size: cover;
       background-position: center;
@@ -476,14 +478,15 @@ body {
     }
 
     .post-meta {
-      position: absolute;
       bottom: $rs * 5;
-      left: 30%;
-      right: 30%;
-      z-index: 9;
+      box-sizing: border-box;
       font-family: $font-sans;
+      left: 30%;
+      position: absolute;
+      right: 30%;
       width: inherit;
-      @include box-sizing(border-box);
+      z-index: 9;
+
       @include respond-to(768) {
         left: $rs;
         right: $rs;
@@ -553,7 +556,7 @@ body {
     }
   }
 
-  .noarticleimage {
+  .no-article-image {
     .post-meta {
       font-family: $font-sans;
       padding-top: 60px;
@@ -654,6 +657,7 @@ body {
     figure {
       margin: 0;
       padding: 0 0 30px;
+      text-align: center;
     }
 
     figcaption {
@@ -734,9 +738,10 @@ body {
     }
 
     .isLeft {
+      box-sizing: border-box;
       float: left;
       width: 47%;
-      @include box-sizing(border-box);
+
       @include respond-to(768) {
         width: 100%;
         padding-bottom: $rs * 2;
@@ -798,9 +803,10 @@ body {
     }
 
     .isRight {
+      box-sizing: border-box;
       float: right;
       width: 47%;
-      @include box-sizing(border-box);
+
       @include respond-to(768) {
         width: 100%;
       }
@@ -942,7 +948,7 @@ body {
   }
 }
 
-.post-tag-articleimage {
+.post-tag-article-image {
   display: none;
 }
 
@@ -967,6 +973,22 @@ pre {
     display: block;
     padding: 8px 12px;
   }
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  border: 1px solid #000;
+  margin-bottom: 1rem;
+  width: 100%;
+}
+
+th {
+  border: 1px solid #000;
+}
+
+td {
+  border: 1px solid #000;
 }
 
 .card {
