Progress made to standardise the markup, styling and scripting

--- a/_includes/supplemental.html
+++ b/_includes/supplemental.html
@@ -1,4 +1,4 @@
-<footer class="bottom-teaser cf">
+<footer class="bottom-teaser clearfix">
   <div class="isLeft">
     <h5 class="index-headline featured">
       <span>Written by</span>
