--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" class="no-js">
   {% include head.html %}
   <body>
     {% include header.html %}
@@ -12,7 +12,7 @@
           </div>
           <div class="post-meta">
             <h1 class="post-title">{{ page.title }}</h1>
-            <div class="cf post-meta-text">
+            <div class="cleafix post-meta-text">
               <div class="author-image" style="background-image: url({{ site.github.owner_gravatar_url }})">Blog Logo</div>
               <h4 class="author-name" itemprop="author" itemscope itemtype="http://schema.org/Person">{{ site.github.owner_name }}</h4>
               on
@@ -27,7 +27,7 @@
         <div class="no-article-image">
           <div class="post-meta">
             <h1 class="post-title">{{ page.title }}</h1>
-            <div class="cf post-meta-text">
+            <div class="clearfix post-meta-text">
               <div class="author-image" style="background-image: url({{ site.github.owner_gravatar_url }})">Blog Logo</div>
               <h4 class="author-name" itemprop="author" itemscope itemtype="http://schema.org/Person">{{ site.github.owner_name }}</h4>
               on
