--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,4 +1,5 @@
-<script>
+{% if jekyll.environment == 'production' %}
+<script type="text/javascript">
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -7,3 +8,4 @@
   ga('create', '{{ site.analytics.google_tracking_id }}', 'auto');
   ga('send', 'pageview');
 </script>
+{% endif %}
