--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -45,6 +45,7 @@
         </section>
         {% include supplemental.html %}
         {% include comments.html %}
+        {% include share.html %}
       </article>
     </main>
     {% include footer.html %}
