--- a/css/main.scss
+++ b/css/main.scss
@@ -46,6 +46,10 @@ a {
   }
 }
 
+.center {
+  text-align: center;
+}
+
 .logo-readium {
   position: fixed;
   left: 10px;
@@ -97,6 +101,16 @@ a {
   }
 }
 
+.app-icon {
+  border-radius: 80px;
+  max-width: 384px;
+  width: 100%;
+}
+
+.spacer {
+  margin: 5rem 0;
+}
+
 .blog-header {
   box-sizing: border-box;
   margin: 0 auto;
@@ -110,21 +124,18 @@ a {
   }
 
   .blog-logo {
-    width: $rs * 7.5;
-    height: $rs * 7.5;
+    width: $rs * 8.125;
+    height: $rs * 8.125;
     position: absolute;
-    top: -$rs * 3.75;
+    top: -$rs * 4.0625;
     right: 50%;
-    margin-right: -$rs * 3.75;
+    margin-right: -$rs * 4.0625;
     background-size: cover;
     border-radius: 50%;
     z-index: 99;
     text-indent: -9999px;
-    border: 3px solid white;
+    border: 5px solid white;
     background-color: white;
-    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
-    -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
   }
 
   .blog-title {
