Dropbox has dropped support to it's public folder. Transition images to the S3 and CloudFront

--- a/css/main.scss
+++ b/css/main.scss
@@ -896,7 +896,7 @@ a {
       display: none;
     }
 
-    background: url('https://dl.dropboxusercontent.com/u/59426690/CDN/desk.svg');
+    background: url('https://cdn.tomasbasham.co.uk/desk.svg');
     //background: url('//s3-media4.ak.yelpcdn.com/assets/2/www/img/e41bc8917803/structural/happy_footer.png');
     background-repeat: no-repeat;
     background-position: center bottom;
