--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,6 +8,9 @@
             <a href="http://emberjs.com/">ember.js</a>
           </li>
           <li class="menu-item">
+            <a href="https://www.docker.com/">docker</a>
+          </li>
+          <li class="menu-item">
             <a href="https://www.whichledlight.com/">whichledlight</a>
           </li>
         </ul>
