--- a/_includes/javascripts.html
+++ b/_includes/javascripts.html
@@ -1,46 +1,6 @@
-<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-<script type="text/javascript" src="{{ "/js/min/jquery.fitvids.min.js" | prepend: site.baseurl }}"></script>
-<script type="text/javascript" src="{{ "/js/index.js" | prepend: site.baseurl }}"></script>
-<script type="text/javascript" src="{{ "/js/min/readingTime.min.js" | prepend: site.baseurl }}"></script>
+<!-- data-main attribute tells require.js to load js/main.js after require.js loads. -->
+<script data-main="{{ "/js/main" | prepend: site.baseurl }}" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.5/require.min.js"></script>
 
 {% for script in layout.head %}
 {% include {{ script }} %}
 {% endfor %}
-
-<script type="text/javascript">
-  (function ($) {
-    'use strict';
-
-    $(document).ready(function(){
-      var $window = $(window);
-      var $image = $('.post-image-image, .teaserimage-image');
-
-      $window.on('scroll', function() {
-        var top = $window.scrollTop();
-
-        if (top < 0 || top > 1500) {
-          return;
-        }
-
-        $image.css('transform', 'translate3d(0px, ' + (top / 3) + 'px, 0px)')
-          .css('opacity', 1 - Math.max(top / 700, 0));
-      });
-
-      $window.trigger('scroll');
-
-      var height = $('.article-image').height();
-      $('.post-content').css('padding-top', height + 'px');
-
-      $('a[href*=#]:not([href=#])').click(function() {
-        if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') && location.hostname == this.hostname) {
-          var target = $(this.hash);
-          target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
-          if (target.length) {
-            $('html,body').animate({ scrollTop: target.offset().top }, 500);
-            return false;
-          }
-        }
-      });
-    });
-  }(jQuery));
-</script>
