--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,7 @@
             <a href="/about">About</a>
           </li>
           <li class="menu-item">
-            <a href="https://github.com/tomasbasham?tab=repositories">Projects</a>
+            <a href="https://github.com/tomasbasham?tab=repositories&type=source">Projects</a>
           </li>
           <ul class="menu-list">
             <li class="menu-item">
