--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -41,9 +41,6 @@ body {
 pre,
 code {
   font-size: 15px;
-  border: 1px solid #e8e8e8;
-  border-radius: 3px;
-  background-color: #eeeeff;
 }
 
 code {
@@ -55,10 +52,10 @@ pre {
   margin: 0 0 30px 0;
 
   > code {
-    border: 0;
     display: block;
     overflow-x: scroll;
-    padding: 8px 12px;
+    padding: 24px;
+    text-align: left;
   }
 }
 
