Change post headings on homepage from h2 to h3

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,7 +1,7 @@
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting" role="article">
   <div class="article-item">
     <header class="post-header">
-      <h2 class="post-title" itemprop="name"><a href="{{ post.url }}" itemprop="url">{{ post.title }}</a></h2>
+      <h3 class="post-title" itemprop="name"><a href="{{ post.url }}" itemprop="url">{{ post.title }}</a></h3>
     </header>
     <section class="post-excerpt" itemprop="description">
       <p>{{ post.content | strip_html | truncatewords: 50 }}</p>
@@ -11,8 +11,7 @@
       <section class="category">
         {% if post.category %}
         <div class="tag post-tag post-tag-{{ post.category | downcase }}">
-          <!-- <a class="link" href="/tag/{{ post.category | downcase }}" title="Go to {{ post.category }}" aria-label="Go to {{ post.category }}">{{ post.category }}</a> -->
-          <a class="link" href="/" title="Go to {{ post.category }}" aria-label="Go to {{ post.category }}">{{ post.category }}</a>
+          <a class="link" href="#" title="Go to {{ post.category }}" aria-label="Go to {{ post.category }}">{{ post.category }}</a>
         </div>
         {% endif %}
       </section>
