--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -1,4 +1,4 @@
-<nav class="pagination" role="navigation">
+<nav class="pagination">
   {% if paginator.previous_page %}
   <a class="newer-posts" href="{% if paginator.page == 2 %}/{% else %}/page{{ paginator.previous_page }}{% endif %}">Newer Posts</a>
   {% endif %}
