--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,9 @@
   {% include head.html %}
   <body>
     {% include header.html %}
-    <main class="content" role="main">
+    <main class="content">
       <article class="post" itemscope itemtype="http://schema.org/Article">
+        {% assign author = site.data.authors[page.author] %}
         {% if page.image %}
         <div class="article-image">
           <div class="post-image-image" style="background-image: url({% if page.image %}{{ page.image }}{% endif %})">
@@ -15,7 +16,7 @@
             <h1 class="post-title">{{ page.title }}</h1>
             <div class="cleafix post-meta-text">
               <div class="author-image" style="background-image: url({{ site.github.owner_gravatar_url }})">Blog Logo</div>
-              <h4 class="author-name" itemprop="author" itemscope itemtype="http://schema.org/Person">{{ site.github.owner_name }}</h4>
+              <h4 class="author-name" itemprop="author" itemscope itemtype="http://schema.org/Person">{{ author.name }}</h4>
               on
               <time datetime="{{ page.date | date: "%F %R" }}">{{ page.date | date_to_string }}</time>
             </div>
@@ -30,7 +31,7 @@
             <h1 class="post-title">{{ page.title }}</h1>
             <div class="clearfix post-meta-text">
               <div class="author-image" style="background-image: url({{ site.github.owner_gravatar_url }})">Blog Logo</div>
-              <h4 class="author-name" itemprop="author" itemscope itemtype="http://schema.org/Person">{{ site.github.owner_name }}</h4>
+              <h4 class="author-name" itemprop="author" itemscope itemtype="http://schema.org/Person">{{ author.name }}</h4>
               on
               <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date_to_string }}</time>
             </div>
