--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,7 +1,7 @@
 {% if page.comments %}
 <div id="disqus_thread"></div>
 
-<script type="text/javascript">
+<script>
   var disqus_shortname = '{{ site.comments.disqus_shortname }}';
   var disqus_identifier = "{{ site.comments.disqus_shortname }}{{ page.url | replace:'index.html', '' }}";
 
