--- a/_includes/share.html
+++ b/_includes/share.html
@@ -1,5 +1,5 @@
 <ul class="social-links">
-  {% for social in site.social.share %}
+  {% for social in site.sharing.share %}
   <li class="social-link-tile">
     <a class="social-link social-link-{{ social.icon }}" href="{{ social.share_url }}{{ social.share_title }}{{ page.title | cgi_escape }}{{ social.share_link }}{{ site.url }}{{ page.id }}" data-provider-name="{{ social.icon }}"></a>
   </li>
